--- a/Random-number-generator/styles/style.css
+++ b/Random-number-generator/styles/style.css
@@ -10,6 +10,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  background-repeat: no-repeat;
 }
 
 #container {
