--- a/Random-number-generator/styles/style.scss
+++ b/Random-number-generator/styles/style.scss
@@ -14,6 +14,7 @@ body {
     background-position: center;
     display: flex;
     justify-content: center;
+    background-repeat: no-repeat;
 }
 
 #container {
