--- a/Random-number-generator/styles/style.scss
+++ b/Random-number-generator/styles/style.scss
@@ -14,7 +14,6 @@ body {
     background-position: center;
     display: flex;
     justify-content: center;
-    background-repeat: no-repeat;
 }
 
 #container {
@@ -26,6 +25,11 @@ body {
     height: 540px;
     padding: 30px;
     box-shadow: 20px 15px 25px 6px $shadow;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 #cardInside {
