--- a/Random/Survey-form/styles.css
+++ b/Random/Survey-form/styles.css
@@ -1,92 +1,135 @@
-header {
-  font-family: 'Roboto', sans-serif;
-  background: #272a2d;
-  color: #E6E6E6;
-  text-align: center;
-  padding: 15px;
-  font-size: 22px;
-  border-radius: 50%;
-}
-p {
-   font-family: 'Noto Sans JP', sans-serif;
-  font-size: 25px;
-}
-h1 {
-  color: white;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&family=Open+Sans+Condensed:wght@300&display=swap');
 
+.header {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    z-index: 2;
+    padding-top: 7px;
+    font-size: 3.5vw;
+    color: #fff;
 }
 
-label {
-  font-size: 16px;
-  align-items: auto;
-  margin-bottom: 1px;
-    font-family: 'Noto Sans JP', sans-serif;
+#desc {
+    text-align: center;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 3vw;
+    color: #fff;
 }
-.form {
-  width: 70%;
-  height: 40px;
-  padding: 8px 16px;
-  margin-top: 55px;
-  color: #2C2F33;
-  background-color: #fff;
-  border: 4px solid #272c5a;
-  border-radius: 15px;
-}
-.drop {
-  color: #2C2F33;
-  background-color: #fff;
-  border: 4px solid #272c5a;
-  border-radius: 14px;
-   width: 60%;
-  height: 56px;
-  padding: 8px 16px;
-  margin-top: 10px;
 
+#header {
+    border: 1px solid #23272a;
+    background-color: #23272a;
+    margin: 0px 10px 10px 10px;
+    border-radius: 50%;
+    margin: auto;
+    width: 70%;
 }
-.button {
-  margin-right: 6px;
-  height: 16px;
-  width: 15px;
-   margin-bottom: 40px;
-}
-.comment {
-  font-family: 'Roboto', sans-serif;
-  font-size: 13px;
-  line-height: 40px;
-  width: 500px;
-   border: 2px solid #272c5a;
-  border-radius: 0.9rem;
-  margin: 15px;
-}
-.submit-button {
-  margin: 15px;
-  width: 300px;
-  height: 80px;
-  border: 4px;
-  border-radius: 4px;
-  display: inline;
-}
-input[type="radio"]{
-  margin: 0 20px 0 20px;
-}
-body:before {
-  /* 
-  header before image
-  */
-  content: '';
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  z-index: -1;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-image: linear-gradient(
-      90deg,
-      rgba(170, 184, 232, 0.7),
-      rgba(182, 170, 250, 0.4)
-    ), url(https://images.unsplash.com/photo-1480506132288-68f7705954bd?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2893&q=80);
 
+.container {
+    border: solid 1px #FFFAEF;
+    border-radius: 6px;
+    display: flex;
+    margin: auto;
+    width: 70%;
+    color: #23272a;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+    background-color: #FFFAEF;
+    box-sizing: border-box;
+    margin-bottom: 140px;
+}
+
+body::before {
+    content: '';
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: linear-gradient(
+        90deg,
+        rgb(201, 201, 255, 0.6),
+        rgba(182, 170, 250, 0.6),
+        rgb(241, 203, 255, 0.6)
+      ), url(https://images.unsplash.com/photo-1517694712202-14dd9538aa97?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80);
+  }
+
+  label {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 3vw;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 400px;
+  }
+
+  .selectGender {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 3vw;
+    margin-right: 400px;
+  }
+  .rickRoll {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 3vw;
+    margin-right: 350px;
+  }
+
+  .submitButton {
+      margin-bottom: 20px;
+  }
+
+  .rickBox {
+    margin-bottom: 15px;
+  }
+
+@media only screen and (min-width: 1068px) {
+    label {
+        margin-right: 650px;
+    }
+
+    .selectGender {
+        margin-right: 650px;
+    }
+
+    .rickRoll {
+        margin-right: 650px;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    label {
+        margin-right: 300px;
+        font-size: 4.5vw;
+    }
+
+    .selectGender {
+        margin-right: 300px;
+        font-size: 4.5vw;
+    }
+
+    .rickRoll {
+        margin-right: 250px;
+        font-size: 4.5vw;
+    }
+     #desc {
+       font-size: 5.5vw;
+  }
+     #id {
+        font-size: 5.5vw;
+    }
+}
+
+.textBox {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.selectGender {
+    margin-top: 10px;
+}
+
+.rickRoll {
+    margin-top: 10px;
 }
