--- a/Frontend Mentor/Preview Card/styles/styles.css
+++ b/Frontend Mentor/Preview Card/styles/styles.css
@@ -17,6 +17,7 @@ body {
   font-size: 2em;
   text-align: center;
   color: #fff;
+  margin-top: 60px;
 }
 
 .attribution a {
@@ -37,6 +38,7 @@ main {
 }
 
 #equilibrium {
+  font-weight: 300;
   margin-top: 20px;
   width: 280px;
   height: 280px;
