--- a/Frontend Mentor/Preview Card/styles/styles.scss
+++ b/Frontend Mentor/Preview Card/styles/styles.scss
@@ -16,6 +16,7 @@ body {
     font-size: 2em; 
     text-align: center; 
     color: #fff;
+    margin-top: 60px;
 }
 
 .attribution a { 
@@ -30,6 +31,7 @@ main {
 }
 
 #equilibrium {
+    font-weight: 300;
     margin-top: 20px;
     width: 280px;
     height: 280px;
