--- a/First 13 months/Frontend Mentor/Social Proof Section/styles/styles.css
+++ b/First 13 months/Frontend Mentor/Social Proof Section/styles/styles.css
@@ -125,7 +125,7 @@ h2 {
   margin-left: 30px;
 }
 
-.name, .verified, .wordReview {
+.name, #verified, .wordReview {
   position: absolute;
 }
 
@@ -136,7 +136,7 @@ h2 {
   margin-left: 80px;
 }
 
-.verified {
+#verified {
   font-size: .3em;
   color: #ee68a4;
   margin-top: 47px;
