--- a/First 13 months/Frontend Mentor/Social Proof Section/styles/styles.scss
+++ b/First 13 months/Frontend Mentor/Social Proof Section/styles/styles.scss
@@ -126,7 +126,7 @@ h2 {
     margin-left: 30px;
 }
 
-.name, #verified, .wordReview {
+.name, .verified, .wordReview {
     position: absolute;
 }
 
