--- a/APLAC-Book-Project/src/styles/styles.css
+++ b/APLAC-Book-Project/src/styles/styles.css
@@ -83,7 +83,7 @@ body, html {
   font-size: 2.5em;
 }
 
-#main-analysis {
+#outline {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
