--- a/Key Club Website/src/styles/homestyles/styles.css
+++ b/Key Club Website/src/styles/homestyles/styles.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 @import url("https://use.typekit.net/zmr3gei.css");
 @import url("https://fonts.googleapis.com/css2?family=Ysabeau+Infant:wght@400;600&display=swap");
+#no-over {
+  overflow-x: hidden;
+}
+
 #title {
   font-family: "myriad-pro", sans-serif;
   font-style: normal;
@@ -93,7 +97,7 @@
   position: flex;
   align-items: center;
   width: 30vw;
-  height: 25vh;
+  height: 27vh;
   background-color: #fafafa;
   border: double 9px #000;
   padding: 0 0 0 10px;
