--- a/Key Club Website/src/styles/homestyles/styles.scss
+++ b/Key Club Website/src/styles/homestyles/styles.scss
@@ -4,6 +4,10 @@
 $font1: "myriad-pro", sans-serif;
 $font2: 'Ysabeau Infant', sans-serif;
 
+#no-over {
+    overflow-x: hidden;
+}
+
 #title {
     font-family: $font1;
     font-style: normal;
@@ -88,7 +92,7 @@ $font2: 'Ysabeau Infant', sans-serif;
     position: flex;
     align-items: center;
     width: 30vw;
-    height: 25vh;
+    height: 27vh;
     background-color: #fafafa;
     border: double 9px #000;
     padding: 0 0 0 10px;
