--- a/CHS UW ENG131 Portfolio/src/styles/outline/styles.css
+++ b/CHS UW ENG131 Portfolio/src/styles/outline/styles.css
@@ -7,13 +7,14 @@
 
 body, html {
   overflow-x: hidden;
+  height: calc(100% + 311em);
   margin: 0;
   padding: 0;
   background: linear-gradient(#fff1e9, #ffe9f9, #fff1e9, #f0ffe9, #e9fffe, #e9efff);
 }
 
 body {
-  height: 12000px !important;
+  height: 14800px;
 }
 
 img {
